# qpb

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: check.yml
qpb/: __init__.py  __main__.py  protobuf.py
